--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -22,6 +22,11 @@
         "scripts/navigation.js"
       ]
     },
+    "video-section.js": {
+      "files": [
+        "scripts/video-section.js"
+      ]
+    },
     "jquery.js": {
       "bower": ["jquery"]
     }
