Added modal and design fixes

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -27,6 +27,11 @@
         "scripts/canvas-video-player.js"
       ]
     },
+    "modal.js": {
+      "files": [
+        "scripts/modal.js"
+      ]
+    },
     "video-section.js": {
       "files": [
         "scripts/video-section.js"
